--- a/app/views/password_resets/_fields.html.erb
+++ b/app/views/password_resets/_fields.html.erb
@@ -1,10 +1,6 @@
 <%= render 'shared/error_messages', object: f.object %>
 
-<%= f.label :name %>
-<%= f.text_field :name, class: 'form-control' %>
-
-<%= f.label :email %>
-<%= f.email_field :email, class: 'form-control' %>
+<%= hidden_field_tag :email, @user.email %>
 
 <%= f.label :password %>
 <%= f.password_field :password, class: 'form-control' %>
